2009-05-18  Steffen Schwigon  <ss5@renormalist.net>

	* 0.04

	* Fix error with comment lines before everything else

2009-04-17  Steffen Schwigon  <ss5@renormalist.net>

	* 0.03

	* support for summary results from TAP::Parser::Aggregator

2009-03-08  Steffen Schwigon  <ss5@renormalist.net>

	* 0.02

	* yaml and comment lines are now assigned to the line before
	under the key {_children}

	* improved documentation

	* less redundant test suite to better serve as documentation

2009-02-13  Steffen Schwigon  <ss5@renormalist.net>

	* 0.01

	* initial version

	* just a data structure and docs
